<resources>
    <string name="app_name">NewsApp</string>
    <string name="main_title_screen">News App</string>
    <string name="main_title">Add Title</string>
    <string name="main_subtitle">Add Subtitle</string>
    <string name="main_bussiness">Add Businness</string>
    <string name="main_video">Add video</string>
    <string name="main_url">Add url</string>
    <string name="main_date">Add date</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
</resources>